# axum_practice

./: Cargo.toml
src/: ctx_mod.rs  error_mod.rs  fn_mod.rs  functions.rs  handler_mod.rs  lib.rs  log_mod.rs  main.rs  model_mod.rs  router_mod.rs  routes_setup_lib.rs  web_mod.rs
src/routes_setup_lib/: routes.rs
src/routes_setup_lib/routes/: get_json_lib.rs  mirror_body_json_lib.rs  query_lib.rs  validate_serde_lib.rs
src/web_mod/: mw_auth.rs  routes_login_mod.rs  routes_tickets.rs
tests/: quick_dev.rs
