[package]
name = "axum_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["headers"] }
serde = { version = "1.0.192", features = ["derive"] }
tiberius = { version = "0.12.2", features = ["winauth"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
tower-http = { version = "0.4.4", features = ["cors"] }
